<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingTop="5dp"
    tools:context=".LoginActivity" >

    <com.quinn.xmpp.widget.ClearableAutoCompleteTextView
        android:id="@+id/et_account"
        style="@style/LoginEditText"
        android:drawableLeft="@drawable/ic_person"
        android:drawableStart="@drawable/ic_person"
        android:hint="@string/login_hint_account"
        android:imeOptions="actionNext"
        android:nextFocusDown="@+id/et_password" />

    <com.quinn.xmpp.widget.CleanableEditText
        android:id="@+id/et_password"
        style="@style/LoginEditText"
        android:drawableLeft="@drawable/ic_secure"
        android:drawableStart="@drawable/ic_secure"
        android:hint="@string/login_hint_password"
        android:imeOptions="actionDone"
        android:inputType="textPassword" />
    
    <Button 
        android:id="@+id/bt_login"
        android:text="@string/button_text_login"
        style="@style/LargeButton"
        android:layout_marginTop="2dip"
        />

</LinearLayout>