<!-- LearnMorePage_A.xml.xml -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="250.5dip"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/round_corner_top"
            android:padding="8dp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/supportIntro" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/server_google"
            
            android:layout_marginBottom="10dp"
            android:background="@color/common_red"
            android:orientation="horizontal"
                   android:paddingLeft="5dp"
             >

            <ImageView
                android:id="@+id/google_talk_image"
                                android:layout_gravity="center_vertical"
                
                android:layout_width="30dp"
                android:layout_height="30dp" />

            

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/google_talk_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/Google_Talk"
                    android:textColor="@color/white" />
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/server_openfire"
            android:layout_marginBottom="10dp"
            android:background="@color/common_red"
            android:orientation="horizontal"
            android:paddingLeft="5dp"
             >

            <ImageView
                android:id="@+id/openfire_image"
                android:layout_gravity="center_vertical"
                android:layout_width="30dp"
                android:layout_height="30dp" />

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/openfire_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/Openfire"
                    android:textColor="@color/white" />
            </FrameLayout>
        </LinearLayout>

        <EditText
            android:id="@+id/server_ip"
          
            android:text="192.168.191.1"
             />
    </LinearLayout>

</RelativeLayout>