<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/Login_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:scaleType="center"
            android:src="@drawable/login_logo" />

        <ImageView
            android:id="@+id/Login_divider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="44.5dip"
            android:layout_marginTop="45.0dip"
            android:scaleType="center"
            android:src="@drawable/text_divide" />

        <FrameLayout
            android:id="@+id/Login_input_wrapper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" >

            <LinearLayout
                android:id="@+id/Login_input_field"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/Login_loginButton"
                  
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="14.0dip"
                    android:background="@color/common_red"
                    android:text="@string/login"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/Login_SignUpButton"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="14.0dip"
                    android:background="@color/commom_gray"
                    android:text="@string/SignUp" />

                <TextView
                    android:id="@+id/swipeToLearnMore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="14.0dip"
                    android:text="@string/swipeToLearnMore"
                    android:textColor="#ff000000"
                    android:textSize="16.0dip"
                    android:textStyle="bold" />
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>

</RelativeLayout>