<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/pocket_blue"
        android:gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addFriend_Group"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/nickname"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="input friend name"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="5dp"
            android:layout_weight="1"
            android:background="@color/pocket_blue" >
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/addFriend" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="5dp"
            android:layout_weight="1"
            android:background="@color/pocket_blue" >
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:divider="@color/commom_gray"
        android:dividerHeight="1dp" >
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="5dp"
            android:layout_weight="1"
            android:background="@color/pocket_blue" >
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/addGroup" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="5dp"
            android:layout_weight="1"
            android:background="@color/pocket_blue" >
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp" >

        <EditText
            android:id="@+id/newGroupName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="input a groupname"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/addGroup"
            android:layout_width="30dp"
            android:layout_height="30dp" 
            android:layout_marginRight="5dp"
            />

        <ImageView
            android:id="@+id/cancel"
            android:layout_width="30dp"
            android:layout_height="30dp" />
    </LinearLayout>

</LinearLayout>